# gridstatus

./: .env.template  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  analyze_sync_reserve.py  collected_tests.txt  gridstatus-logo.pptx  integration_tests.txt  isodata-logo.pptx  pyproject.toml  release.md  requirements.txt  setup.cfg  test.py  update_readme.py
.claude/commands/: code-guard.md  code-review.md
.github/: pull_request_template.md
.github/workflows/: build_docs.yaml  docs.yaml  install.yaml  lint.yaml  release.yaml  test_isone_api.yaml  tests-commit.yaml  tests-main.yaml  tests-nightly.yaml  tests-pr.yaml  tests.yaml  update_gs_etl.yaml
Examples/: Downloading CAISO Data.ipynb  Fuel Mix Over Time - NYISO.ipynb  NYISO Fuel Mix Over Time.ipynb  PJM LMP Data.ipynb
debug_caiso_html/: renewables_20251102.html  renewables_20251103.html  renewables_20251104.html
docs/: 5-minute-overview.md  Makefile  api-reference.rst  availability.md  conf.py  index.md  installation.md  interconnection_queues.md  isodata.rst  isodata.tests.rst  lmp-availability.md  lmp.md  pull_request_template.md  update_docs.py
docs/.jupyter_cache/: global.db
docs/Examples/: Capacity Prices - NYISO.ipynb  Downloading CAISO Data.ipynb  Fuel Mix Over Time - NYISO.ipynb  Interconnection Queues.ipynb  NYISO Capacity Prices.ipynb  PJM LMP Data.ipynb  index.md
docs/Examples/EIA/: Interchange Data.ipynb  index.md
docs/Examples/caiso/: Ancillary Services.ipynb  CAISO Oasis.ipynb  DAM Heat Map.ipynb  DAM Heatmap.ipynb  Downloading CAISO Data.ipynb  Renewable Curtailment - CAISO.ipynb  Renewable Curtailment.ipynb  index.md
docs/Examples/ercot/: Ancillary Services.ipynb  Settlement Point Prices.ipynb  index.md
docs/Examples/ercot_api/: ERCOT API Examples.ipynb  index.md
docs/Examples/ieso/: IESO Load Data.ipynb  index.md
docs/Examples/misc/: Interconnection Queues.ipynb  Save To.ipynb  index.md
docs/Examples/nyiso/: Capacity Prices - NYISO.ipynb  Fuel Mix Over Time - NYISO.ipynb  index.md
docs/Examples/pjm/: PJM LMP Data.ipynb  PJM Load Data.ipynb  index.md
docs/Examples/spp/: LMP Data.ipynb  index.md
docs/_static/: custom.css
docs/jupyter_execute/: index.ipynb
docs/jupyter_execute/Examples/caiso/: Downloading CAISO Data.ipynb
docs/jupyter_execute/jupyter_execute/: installation.ipynb  interconnection_queues.ipynb  lmp.ipynb
gridenv/: pyvenv.cfg
gridstatus/: __init__.py  aeso.py  base.py  caiso.py  caiso_utils.py  config.py  decorators.py  eia.py  eia_constants.py  ercot.py  ercot_60d_utils.py  ercot_constants.py  gs_logging.py  httpio.py  ieso.py  ieso_constants.py  isone.py  lmp_config.py  logger.py  logging.py  miso.py  miso_api.py  nyiso.py  pjm.py  pjm_constants.py  pjm_dataviewer.py  pjm_dataviewer_lmp_session.py  pjm_dataviewer_session.py  spp.py  utils.py  viz.py
gridstatus/aeso/: __init__.py  aeso.py  aeso_constants.py
gridstatus/aeso_api/: aeso_api.py  aeso_api_constants.py
gridstatus/caiso/: __init__.py  caiso.py  caiso_constants.py  caiso_utils.py  daily_energy_storage.py
gridstatus/eia_data/: grid_monitor_files.json
gridstatus/epa/: __init__.py  epa.py  epa_constants.py
gridstatus/ercot_api/: README.md  api_parser.py  ercot_api.py  esrapi-apim-api.json  pubapi-apim-api.json
gridstatus/httpio/: __init__.py  adapter_dispatcher.py  auto_adapter_dispatcher.py  auto_hook_dispatch.py  hook_dispatch.py  httpio.py  httpio_pandas.py  httpio_requests.py  httpio_requests_session.py  session.py
gridstatus/httpio/adapters/: base.py  logger.py  pickle_cache.py
gridstatus/isone_api/: isone_api.py  isone_api_constants.py
gridstatus/pjm_dataviewer/: lmp_session.py  session.py
gridstatus/public_certificates/ieso/: intermediate_and_root.pem
gridstatus/public_certificates/miso_api/: intermediate_and_root.pem
gridstatus/tests/: base_test_iso.py  conftest.py  decorators.py  test_aeso.py  test_base.py  test_caiso.py  test_caiso2.py  test_decorators.py  test_eia.py  test_ercot.py  test_ercot2.py  test_ercot_60d_utils.py  test_ercot_api.py  test_gridstatus.py  test_ieso.py  test_interconnection_queue.py  test_isone.py  test_isone2.py  test_isone_api.py  test_isone_polars.py  test_isos.py  test_lmp_config.py  test_logger.py  test_methods.py  test_miso.py  test_miso2.py  test_nyiso.py  test_nyiso2.py  test_pjm.py  test_pjm2.py  test_save_to.py  test_spp.py  test_spp2.py  test_subclass.py  test_utils.py  test_version.py  test_viz.py  vcr_utils.py
gridstatus/tests/schema_snapshots/: isone.json  miso.json  nyiso.json
gridstatus/tests/source_specific/: conftest.py  test_aeso.py  test_aeso_api.py  test_caiso.py  test_eia.py  test_epa.py  test_ercot.py  test_ercot_api.py  test_get_lmp_deprecation.py  test_get_lmp_split_equivalence.py  test_gridstatus.py  test_ieso.py  test_isone.py  test_isone_api.py  test_lmp_config.py  test_miso.py  test_miso_api.py  test_nyiso.py  test_pjm.py  test_save_to.py  test_spp.py
isodata/: __init__.py  base.py  caiso.py  decorators.py  ercot.py  isone.py  miso.py  nyiso.py  pjm.py  spp.py  utils.py
isodata/tests/: conftest.py  test_caiso.py  test_ercot.py  test_isos.py  test_miso.py  test_nyiso.py  test_pjm.py  test_version.py
mypy_report/: index.html
mypy_report/html/docs/: conf.py.html  update_docs.py.html
mypy_report/html/gridstatus/: __init__.py.html  base.py.html  caiso.py.html  caiso_utils.py.html  decorators.py.html  eia.py.html  ercot.py.html  ercot_60d_utils.py.html  gs_logging.py.html  ieso.py.html  isone.py.html  lmp_config.py.html  miso.py.html  nyiso.py.html  pjm.py.html  spp.py.html  test.py.html  utils.py.html  version.py.html  viz.py.html
mypy_report/html/scripts/: caiso_latest_checker.py.html  iso_ne_api_tester.py.html  pjm_api_tester.py.html
scripts/: fixtures.py  schema_parity.py
utils/: bump_version.py
utils/ercot/: README.md  describe-data-product.sh  describe-report-type.sh  fully-describe-data-product.sh  generate-rtid-constant.sh  get-report-type-id.sh  make-report-type-constant.sh
(+120 files in other folders)
