[project]
name = "gridstatus"
version = "0.34.0"
readme = "README.md"
description = "API to access energy data"
requires-python = ">=3.10,<3.15"
authors = [
    { name = "Max Kanter", email = "kmax12@gmail.com" },
    { name = "Will Koehrsen", email = "will@gridstatus.com"},
    { name = "Ryan Kladar", email = "ryan@gridstatus.com"},
]

keywords = ["energy", "independent system operator"]
license = { file = "LICENSE" }
dependencies = [
    "requests ~=2.32",
    "pandas ~=2.2",
    "beautifulsoup4 ~=4.13",
    "tabulate ~=0.9",
    "tqdm ~=4.67",
    "openpyxl ~=3.1",
    "pdfplumber ~=0.11",
    "lxml ~=5.3",
    "plotly ~=6.0",
    "termcolor ~=3.0",
    "xlrd ~=2.0",
    "xmltodict ~=0.14",
    "zipp ~=3.21",
    "certifi ~=2025.1",
    "setuptools ~=78.1",
    "cryptography ~=44.0",
    "urllib3 ~=2.4",
    "virtualenv ~=20.30",
    "frozendict ~=2.4",
    "rpds-py >= 0.30.0; python_version >= '3.14'",
]

[dependency-groups]
dev = [
    "pytest ~=8.3",
    "pytest-xdist ~=3.6",
    "pytest-rerunfailures ~=15.0",
    "pytest-cov ~=6.1",
    "ruff==0.11.5",
    "pre-commit ~=4.2",
    "ipython >=8.4.0,<10",
    "jupyter ~=1.1",
    "matplotlib ~=3.10",
    "myst-nb ~=1.2",
    "sphinx >=6.2.1,<9",
    "sphinx-book-theme ~=1.1",
    "sphinx-copybutton ~=0.5",
    "sphinx-inline-tabs ~=2023.4",
    "sphinx_design ~=0.6",
    "sphinxext-opengraph ~=0.10",
    "sphinx-thebe ~=0.3",
    "sphinx-togglebutton ~=0.3",
    "sphinx-favicon ~=1.0",
    "sphinx-autoapi ~=3.6",
    "notebook ~=7.4",
    "jupyterlab ~=4.4",
    "mypy ~=1.15",
    "time-machine ~=2.16",
    "tornado ~=6.4",
    "jinja2 ~=3.1",
]


[project.urls]
"Source Code" = "https://github.com/gridstatus/gridstatus/"
"Changes" = "https://github.com/gridstatus/gridstatus/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/gridstatus/gridstatus/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
testpaths = ["gridstatus/tests/*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests that pull from an external API (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 88
src = ["gridstatus"]

[tool.ruff.lint]
ignore = ["E501"]
select = ["F", "E", "W", "Q", "I001"]

[tool.ruff.lint.isort]
known-first-party = ["gridstatus"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402", "F403", "F405", "E501", "I001"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
source = ["gridstatus"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
ignore_missing_imports = true
strict = true
