[project]
name = "isodata"
version = "0.1.0"
description = "API to access energy data"
long_description = file: README.md
long_description_content_type = text/markdown
readme = "README.md"
authors = [{name = "Max Kanter", email = "kmax12@gmail.com"}]
license = BSD 3-clause
license_files =
    LICENSE
classifiers = 
    Programming Language :: Python
    Programming Language :: Python :: 3
keywords = energy, independent system operato

[project.urls]
Homepage = "https://github.com/kmax12/isodata"


[options]
install_requires =
    requests>=2.28.1
    pandas>=1.4.
    beautifulsoup4>=4.8.13
    json5>=0.9.8
    tabulate>=0.8.10

python_requires = >=3.8, <4
packages = find:
