[metadata]
name = isodata
version = attr: isodata.__version__
description = API to access energy data
long_description = file: README.md
long_description_content_type = text/markdown
author = Max Kanter
author_email = kmax12@gmail.com
license = BSD 3-clause
license_files =
    LICENSE
classifiers = 
    Programming Language :: Python
    Programming Language :: Python :: 3
keywords = energy, independent system operator

[project.urls]
Homepage = https://github.com/kmax12/isodata


[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    requests >= 2.28.1
    pandas >= 1.3.0
    beautifulsoup4 >= 4.8.13
    json5 >= 0.9.8
    tabulate >= 0.8.10
python_requires = >=3.8, <4


[options.package_data]
* =
    LICENSE
    README.md

[options.exclude_package_data]
* =
    * __pycache__
    *.py[co]