[metadata]
name = isodata
version = attr: isodata.version.__version__
description = API to access energy data
long_description = file: README.md
long_description_content_type = text/markdown
author = Max Kanter
author_email = kmax12@gmail.com
license = BSD 3-clause
license_files =
    LICENSE
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = energy, independent system operator

[project.urls]
Source Code = https://github.com/kmax12/isodata
Issue Tracker = https://github.com/kmax12/isodata/issues

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    requests >= 2.28.1
    pandas >= 1.3.0
    beautifulsoup4 >= 4.8.13
    json5 >= 0.9.8
    tabulate >= 0.8.10
    pytz >= 2022.2.1
python_requires = >=3.7, <4

[options.extras_require]
dev =
    flake8 == 5.0.4
    isort == 5.10.1
    black == 22.6.0
    pre-commit == 2.20.0
    %(test)s
test =
    pytest == 7.1.2

[options.package_data]
* =
    LICENSE
    README.md

[options.exclude_package_data]
* =
    * __pycache__
    *.py[co]
